Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5495

Cannot use field values from a model to append to another model

XMLWordPrintable

    • 813cf7f88015680206aafb1d9dfd05900e64abbd

      Unless separate properties are created and bound to these values, the target's values are 'undefined'.

      See attached for an example.

        1. MainDelegate.qml
          0.3 kB
        2. OtherModel.qml
          0.5 kB
        3. mainmodel.qml
          0.3 kB
        4. OtherDelegate.qml
          0.8 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            wallison Warwick Allison (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes