ListModel elements can only be values or *lists* of objects, not objects. Fixes QTBUG-5495